// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JIRA wiki markup - Triple Dash should not replace with triple dashes when sticked with parenthesis or alphanumerical 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "---foo",
          "type": "text",
        },
        {
          "attrs": {
            "text": "
",
          },
          "type": "hardBreak",
        },
        {
          "text": "bar---",
          "type": "text",
        },
        {
          "attrs": {
            "text": "
",
          },
          "type": "hardBreak",
        },
        {
          "text": "(---",
          "type": "text",
        },
        {
          "attrs": {
            "text": "
",
          },
          "type": "hardBreak",
        },
        {
          "text": "---)",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`JIRA wiki markup - Triple Dash should replace triple dash with a special symbol 1`] = `
{
  "content": [
    {
      "attrs": {
        "localId": null,
      },
      "content": [
        {
          "text": "foo — bar",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
